--- a/PI004-war/web/index.xhtml
+++ b/PI004-war/web/index.xhtml
@@ -35,7 +35,9 @@
                 <p:submenu label="Relatórios">
                     <p:menuitem value="Clientes por Data Nascimento" action="buscarClientesPorData"/>
                 </p:submenu>
-               
+               <p:submenu label="Logout">
+                   <p:menuitem value="Logout" action="#{usuarioBean.logout()}"/>
+                </p:submenu>
             </p:menu>
         </h:form>
     </h:body>
