Correção de leve

--- a/PI004-war/web/listaProdutos.xhtml
+++ b/PI004-war/web/listaProdutos.xhtml
@@ -30,7 +30,7 @@
 
                     <div class="container-fluid">
                         <div class="row">
-                            <ui:repeat value="#{produtoBean.listarTodosProdutos}" var="prod">
+                            <ui:repeat value="#{produtoBean.listarTodosProdutos()}" var="prod">
                                 <div class="col-sm-4">                                    
                                     <div class="thumbnail">
                                         <a href="detalheProduto.xhtml?id=">
