--- a/PI004-war/web/listaProdutos.xhtml
+++ b/PI004-war/web/listaProdutos.xhtml
@@ -2,7 +2,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
     <h:head>
         <title>PS4</title>
         <h:outputScript name="js/jquery-1.11.3.js" />
@@ -43,9 +45,19 @@
 
                                                     </h:outputText>
                                                 </h3>
-                                                <!--</ui:repeat>-->    
+
+                                                <!--</ui:repeat>-->
+
+
+                                                <h:outputLink value="detalheProduto.xhtml" styleClass="btn btn-default btn-block" pt:role="button">
+                                                    <f:param name="id" value="#{prod.id}" />
+                                                    Ver detalhes
+                                                </h:outputLink>
+
                                             </div>
+
                                         </a>
+
                                     </div> 
                                 </div>
                             </ui:repeat>
