--- a/PI004-war/web/listaProdutos.xhtml
+++ b/PI004-war/web/listaProdutos.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
     <h:head>
-        <title>PS4</title>
+        <title>Produtos</title>
         <h:outputScript name="js/jquery-1.11.3.js" />
         <h:outputStylesheet name="css/bootstrap.min.css" />
         <h:outputScript name="js/bootstrap.min.js" />
