CRIACAO/ALTERACAO/LISTAGEM/LOGIN/CADASTROS

--- a/PI004-war/web/cadastroProduto.xhtml
+++ b/PI004-war/web/cadastroProduto.xhtml
@@ -12,7 +12,7 @@
             <h:panelGrid columns="2">
                 
                 <h:outputLabel value="ID"/>
-                <p:inputText value="#{produtoBean.produto.id}" />
+                <p:inputText value="#{produtoBean.produto.imgCaminho}" />
                 
                 <h:outputLabel value="Categoria Produto"/>
                 <p:inputText value="#{produtoBean.produto.categoriaProduto}" />
