--- a/PI004-war/web/carouselDetalhes.xhtml
+++ b/PI004-war/web/carouselDetalhes.xhtml
@@ -23,15 +23,15 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="resources/img/thewitcher3.jpg" alt="Chania"/>
+        <img src="#{produtoBean.produto.imgCaminho}" alt="Chania"/>
     </div>
 
     <div class="item">
-      <img src="resources/img/six.jpg" alt="Chania"/>
+      <img src="#{produtoBean.produto.imgCaminho}" alt="Chania"/>
     </div>
 
     <div class="item">
-      <img src="resources/img/creed.jpg" alt="Flower"/>
+      <img src="#{produtoBean.produto.imgCaminho}" alt="Flower"/>
     </div>
 
    
