--- a/PI004-war/web/listaProdutos.xhtml
+++ b/PI004-war/web/listaProdutos.xhtml
@@ -36,10 +36,10 @@
                                 <div class="col-sm-4">                                    
                                     <div class="thumbnail">
                                         <a href="detalheProduto.xhtml?id=">
-                                            <h:graphicImage name="img/thewitcher3.jpg" alt="" class="img-responsive" />
+                                            <h:graphicImage value="#{prod.imgCaminho}" alt="" class="img-responsive" />
                                             <div class="caption">
                                                 <!-- <ui:repeat value="" var="produto"> -->
-                                                <h3><h:outputText value="#{prod.nomeProduto}" /></h3>
+                                                <h4><h:outputText value="#{prod.nomeProduto}" /></h4>
                                                 <h3>
                                                     <h:outputText value="R$#{prod.valorProduto}">
 
