--- a/PI004-war/web/menu.xhtml
+++ b/PI004-war/web/menu.xhtml
@@ -74,7 +74,7 @@
                         <li><a href="#">Bem-vindo : #{usuarioBean.usuario.nome}</a></li>
                         <li>
                             <h:form>
-                            <p:commandButton action="#{usuarioBean.logout()}" value="Sair"></p:commandButton>
+                                <p:commandButton styleClass="btn btn-default" action="#{usuarioBean.logout()}"  value="Sair"></p:commandButton>
                             </h:form>
                         </li>
                         <li><a href="#">Carrinho</a></li>
