--- a/PI004-war/web/menu.xhtml
+++ b/PI004-war/web/menu.xhtml
@@ -74,10 +74,10 @@
                         <li><a href="#">Bem-vindo : #{usuarioBean.usuario.nome}</a></li>
                         <li>
                             <h:form>
-                                <p:commandButton styleClass="btn btn-default" action="#{usuarioBean.logout()}"  value="Sair"></p:commandButton>
+                                <p:commandButton style="background-color:#fff; margin-top:10px; ;" action="#{usuarioBean.logout()}"  value="Sair"></p:commandButton>
                             </h:form>
                         </li>
-                        <li><a href="#">Carrinho</a></li>
+                        <li><a href="carrinho.xhtml">Carrinho</a></li>
                         <li><a href="#">Cadastre-se</a></li>
 
 
