ALTERAÇÕES DETALHE/LISTA/USUARIOBEAN

--- a/PI004-war/web/detalheProduto.xhtml
+++ b/PI004-war/web/detalheProduto.xhtml
@@ -47,11 +47,11 @@
                             <!-- <button class="btn btn-primary btn-lg ">Comprar</button> -->
                             <hr></hr>
 
-                            <div class="col-sm-8">
+                           <!-- <div class="col-sm-8">
                                 <h:form prependId="false">
                                     <h:commandButton action="#{compraBean.adicionarProduto(produtoBean.produto, 1)}" styleClass="btn btn-success btn-lg btn-block" pt:role="button" value="Comprar" />
                                 </h:form>
-                            </div>
+                            </div>-->
                             <ul class="nav nav-tabs">                                
                                 <li><a data-toggle="tab" href="#Descricao">Descrição</a></li>                                
                             </ul>
