--- a/PI004-war/web/carrinho.xhtml
+++ b/PI004-war/web/carrinho.xhtml
@@ -72,7 +72,7 @@
                             <td data-th="Product">
                                 <div class="row">
 
-                                    <div class="col-sm-2 hidden-xs"><img src="resources/img/thewitcher3.jpg" alt="..." class="img-responsive"/></div>
+                                    <div class="col-sm-2 hidden-xs"><img src="#{item.produto.imgCaminho}" alt="..." class="img-responsive"/></div>
                                     <div class="col-sm-10">
                                         <h4 class="nomargin">#{item.produto.nomeProduto}</h4>
                                         <p>#{item.produto.fabricanteProduto}</p>
@@ -103,7 +103,7 @@
                     <tr>
 
 
-                        <td><a href="#" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continuar Comprando </a></td>
+                        <td><a href="listaProdutos.xhtml" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continuar Comprando </a></td>
                         <td colspan="2" class="hidden-xs"></td>
                         <td class="hidden-xs text-center"><strong>Total R$#{compraBean.valorTotal}</strong></td>
                         <td><a href="#" class="btn btn-success btn-block">Finalizar <i class="fa fa-angle-right"></i></a></td>
