ALTERAÇÃO AJAX, PRODUTOBEAN, NOVOBEAN PARA PRODUTOS NOVOS, FORMS ARRUMADAS, SCRIPT E CAROUSEL ALTERADOS

--- a/PI004-war/web/menu.xhtml
+++ b/PI004-war/web/menu.xhtml
@@ -78,7 +78,7 @@
                             </h:form>
                         </li>
                         <li><a href="carrinho.xhtml">Carrinho</a></li>
-                        <li><a href="#">Cadastre-se</a></li>
+                        <li><a href="cadastrarCliente.xhtml">Cadastre-se</a></li>
 
 
                     </ul>
