--- a/PI004-war/web/carouselDetalhes.xhtml
+++ b/PI004-war/web/carouselDetalhes.xhtml
@@ -16,7 +16,8 @@
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
+   
+    
     
   </ol>
 
@@ -27,12 +28,11 @@
     </div>
 
     <div class="item">
-      <img src="#{produtoBean.produto.imgCaminho}" alt="Chania"/>
+        <iframe width="480" height="320" src="#{produtoBean.produto.linkVideo}" frameborder="0" allowfullscreen=""></iframe>
+  
     </div>
 
-    <div class="item">
-      <img src="#{produtoBean.produto.imgCaminho}" alt="Flower"/>
-    </div>
+   
 
    
   </div>
