--- a/PI004-war/web/menu.xhtml
+++ b/PI004-war/web/menu.xhtml
@@ -81,7 +81,9 @@
                                 </h:form>
                             </li>
                         </c:if>
-                        <li><a href="login.xhtml">Login</a></li>
+                        <c:if test="#{usuarioBean.usuario.nome == null}">
+                            <li><a href="login.xhtml">Login</a></li>
+                        </c:if>
                         <li><a href="carrinho.xhtml">Carrinho</a></li>
                         <li><a href="cadastrarCliente.xhtml">Cadastre-se</a></li>
 
