BUSCAR PRODUTO POR NOME/ALTERAR PRODUTO

--- a/PI004-war/web/index.xhtml
+++ b/PI004-war/web/index.xhtml
@@ -33,7 +33,7 @@
                 </p:submenu>
                 
                 <p:submenu label="Relatórios">
-                    <p:menuitem value="Clientes por Data Nascimento" action="buscarClientesPorData"/>
+                    <p:menuitem value="PRODUTOS POR NOME" action="buscarClientesPorData"/>
                 </p:submenu>
                <p:submenu label="Logout">
                    <p:menuitem value="Logout" action="#{usuarioBean.logout()}"/>
