BUSCAR/ALTERAR/PRODUTOS

--- a/PI004-war/web/listaProdutos.xhtml
+++ b/PI004-war/web/listaProdutos.xhtml
@@ -48,7 +48,7 @@
                                                 <!--</ui:repeat>-->
 
 
-                                                <h:outputLink value="detalheProduto.xhtml" styleClass="btn btn-default btn-block" pt:role="button">
+                                                <h:outputLink value="alterarProdutos.xhtml" styleClass="btn btn-default btn-block" pt:role="button">
                                                     <f:param name="id" value="#{prod.id}" />
                                                     Ver detalhes
                                                 </h:outputLink>
