--- a/PI004-war/web/relatorio/buscarClientesPorData.xhtml
+++ b/PI004-war/web/relatorio/buscarClientesPorData.xhtml
@@ -25,8 +25,8 @@
                         <h:outputLabel value="#{produto.valorProduto}"/>
                     </p:column> 
                     <p:column headerText="Alterar">
-                    <h:outputLink value="detalheProduto.xhtml" styleClass="btn btn-default btn-block">
-                        <f:param name="id" value="#{produto.id}" />
+                    <h:outputLink value="alterarProdutos.xhtml" styleClass="btn btn-default btn-block">
+                    <f:param name="id" value="#{produto.id}" />
                      Ver detalhes
                     </h:outputLink>
 
