ALTERACOES QUE SO DEUS DUVIDA

--- a/PI004-war/web/alterarCliente.xhtml
+++ b/PI004-war/web/alterarCliente.xhtml
@@ -132,6 +132,7 @@ legend{
 
                             <div class="col-xs-6 col-md-6">
                                 <p:inputText value="#{usuarioBean.usuario.dtNascimento}" class="form-control input-lg" pt:placeholder="Data Nascimento"/>                          
+                                <p:calendar id="popup" value="#{usuarioBean.usuario.dtNascimento}" />
                             </div>
                            
                      
