--- a/PI004-war/web/menu.xhtml
+++ b/PI004-war/web/menu.xhtml
@@ -53,7 +53,7 @@
                             </li>
                         </li>
                     </ul>
-                    <form class="navbar-form navbar-left" role="search" action="buscar.xhtml" method="post">
+                    <form class="navbar-form navbar-left" role="search" action="buscar.xhtml" method="get">
 
                         <div class="form-group">
 
