--- a/PI004-war/web/menu.xhtml
+++ b/PI004-war/web/menu.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:c="http://java.sun.com/jsp/jstl/core">
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>       
         <h:outputScript name="js/jquery-1.11.3.js" />
         <h:outputStylesheet name="css/style.css" /> 
@@ -21,34 +22,62 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">UziGames</a>
+                    <a class="navbar-brand" href="listaProdutos.xhtml">UziGames</a>
                 </div>
 
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        
+
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Games <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Xbox</a></li>
-                                <li><a href="#">Playstation</a></li>
-
+                                <li>
+                                    <h:link value="Playstation" outcome="buscar.xhtml">
+                                        <f:param name="platProd" value="PS" />
+                                        <f:param name="catProd" value="JOGOS" />
+                                    </h:link>
+                                </li>
+                                <li>
+                                    <h:link value="Xbox" outcome="buscar.xhtml">
+                                        <f:param name="platProd" value="XBOX" />
+                                        <f:param name="catProd" value="JOGOS" />
+                                    </h:link>
+                                </li>
                             </ul>
                         </li>
 
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Console <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Xbox</a></li>
-                                <li><a href="#">Playstation</a></li>
+                                <li>
+                                    <h:link value="Playstation" outcome="buscar.xhtml">
+                                        <f:param name="platProd" value="PS" />
+                                        <f:param name="catProd" value="CONSOLES" />
+                                    </h:link>
+                                </li>
+                                <li>
+                                    <h:link value="Xbox" outcome="buscar.xhtml">
+                                        <f:param name="platProd" value="XBOX" />
+                                        <f:param name="catProd" value="CONSOLES" />
+                                    </h:link>
+                                </li>                                
                             </ul>
-
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Acessórios <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Xbox</a></li>
-                                    <li><a href="#">Playstation</a></li>
+                                    <li>
+                                        <h:link value="Playstation" outcome="buscar.xhtml">
+                                            <f:param name="platProd" value="PS" />
+                                            <f:param name="catProd" value="ACESSORIOS" />
+                                        </h:link>
+                                    </li>
+                                    <li>
+                                        <h:link value="Xbox" outcome="buscar.xhtml">
+                                            <f:param name="platProd" value="XBOX" />
+                                            <f:param name="catProd" value="ACESSORIOS" />
+                                        </h:link>
+                                    </li>            
                                 </ul>
                             </li>
                         </li>
