--- a/PI004-war/web/cadastroProduto.xhtml
+++ b/PI004-war/web/cadastroProduto.xhtml
@@ -63,6 +63,19 @@ legend{
   background-image: linear-gradient(to bottom, #79bc64, #5e7056);
   text-decoration: none;
 }
+  #msg > p{
+                        border: 1px solid white; padding: 10px 20px; text-align: center
+                         } 
+                         #msg > p.sucesso{
+                             color:#3b6e22;
+                             background-color: #a4e388 !important;
+                         }
+                         #msg > p.erro{
+                             color:#d43f3a;
+                             background-color: #fcc !important;
+                         }
+
+
 
 .form .form-control { margin-bottom: 10px; }
 @media (min-width:768px) {
@@ -94,6 +107,12 @@ legend{
                         <legend>Preencher</legend>
 
                         <div class="row">
+                            
+                        <div id="msg"> 
+                        <ui:fragment rendered="#{flash.msg !=null}">
+                            <p class="#{flash.tipo}">#{flash.msg}</p>
+                        </ui:fragment>
+                        </div>
                             
                             <div class="col-xs-6 col-md-12">
                             <p:inputText value="#{novoProdutoBean.produto.imgCaminho}" class="form-control input-lg" pt:placeholder="Img"/>
