--- a/PI004-war/web/finalizarCompra.xhtml
+++ b/PI004-war/web/finalizarCompra.xhtml
@@ -6,6 +6,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
     <h:head>
+                <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"></meta>
         <link href="http://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet"/>
         <style type="text/css">
             .table>tbody>tr>td, .table>tfoot>tr>td{
