--- a/PI004-war/web/cabecalho.xhtml
+++ b/PI004-war/web/cabecalho.xhtml
@@ -3,7 +3,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>       
+                <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"></meta>
          <h:outputStylesheet name="css/style.css" />
+         
     </h:head>
     <h:body>
         
