--- a/PI004-war/web/cadastrarCliente.xhtml
+++ b/PI004-war/web/cadastrarCliente.xhtml
@@ -4,9 +4,11 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Cadastrar Cliente</title>    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet"/>
+        <title>Cadastrar Cliente</title>   
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"></meta><link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet"/>
         <style type="text/css">
             .row{
                 background-color:#fff;
@@ -76,16 +78,16 @@
                 }
             }
             #msg > p{
-                        border: 1px solid white; padding: 10px 20px; text-align: center
-                         } 
-                         #msg > p.sucesso{
-                             color:#3b6e22;
-                             background-color: #a4e388 !important;
-                         }
-                         #msg > p.erro{
-                             color:#d43f3a;
-                             background-color: #fcc !important;
-                         }
+                border: 1px solid white; padding: 10px 20px; text-align: center
+            } 
+            #msg > p.sucesso{
+                color:#3b6e22;
+                background-color: #a4e388 !important;
+            }
+            #msg > p.erro{
+                color:#d43f3a;
+                background-color: #fcc !important;
+            }
 
         </style>
         <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -106,83 +108,97 @@
                         <legend>Preencher</legend>
 
                         <div class="row">
+
+                            <div id="msg"> 
+                                <ui:fragment rendered="#{flash.msg !=null}">
+                                    <p class="#{flash.tipo}">#{flash.msg}</p>
+                                </ui:fragment>
+                            </div>
+
+
+                            <div class="col-xs-6 col-md-9">
+                                <h:outputLabel>Nome</h:outputLabel>
+                                <p:inputText value="#{novoUsuarioBean.usuario.nome}" class="form-control input-lg" pt:placeholder="Nome" pt:required=""/>
+                            </div>
                             
-                        <div id="msg"> 
-                        <ui:fragment rendered="#{flash.msg !=null}">
-                            <p class="#{flash.tipo}">#{flash.msg}</p>
-                        </ui:fragment>
-                        </div>
-
-
-                            <div class="col-xs-6 col-md-12">
-                                <p:inputText value="#{novoUsuarioBean.usuario.nome}" class="form-control input-lg" pt:placeholder="Nome"/>
+                            <div class="col-xs-6 col-md-3">
+                                 <h:outputLabel>Sexo</h:outputLabel>
+                                <h:selectOneMenu value="#{novoUsuarioBean.usuario.sexo}" class="form-control input-lg">
+                                    <f:selectItem itemValue="M" itemLabel="M" />
+                                    <f:selectItem itemValue="F" itemLabel="F" />	   							
+                                </h:selectOneMenu>                            </div>
+                           
+                            <div class="col-xs-6 col-md-6">
+                                 <h:outputLabel>Login</h:outputLabel>
+                                <p:inputText value="#{novoUsuarioBean.usuario.login}" class="form-control input-lg" pt:placeholder="Login" pt:required=""/>                       
                             </div>
 
                             <div class="col-xs-6 col-md-6">
-                                <p:inputText value="#{novoUsuarioBean.usuario.login}" class="form-control input-lg" pt:placeholder="Login"/>                       
-                            </div>
-
-                            <div class="col-xs-6 col-md-6">
-                                <p:inputText value="#{novoUsuarioBean.usuario.senha}" class="form-control input-lg" pt:placeholder="Senha"/>                       
+                                 <h:outputLabel>Senha</h:outputLabel>
+                                <p:inputText value="#{novoUsuarioBean.usuario.senha}" class="form-control input-lg" pt:placeholder="Senha" pt:required=""/>                       
                             </div>
 
                             <div class="col-xs-6 col-md-12">
+                                 <h:outputLabel>Email</h:outputLabel>
                                 <p:inputText value="#{novoUsuarioBean.usuario.email}" class="form-control input-lg" pt:placeholder="Email"/>                                     
                             </div>
 
                             <div class="col-xs-6 col-md-6">
+                                 <h:outputLabel>Rg</h:outputLabel>
                                 <p:inputText value="#{novoUsuarioBean.usuario.rg}" class="form-control input-lg" pt:placeholder="RG"/>                          
                             </div>
 
                             <div class="col-xs-6 col-md-6">
-                                <p:inputText value="#{novoUsuarioBean.usuario.cpf}" class="form-control input-lg" pt:placeholder="CPF"/>                           
+                                 <h:outputLabel>Cpf</h:outputLabel>
+                                <p:inputText value="#{novoUsuarioBean.usuario.cpf}" class="form-control input-lg" pt:placeholder="CPF" pt:required=""/>                           
                             </div>
 
                             <div class="col-xs-6 col-md-6">
-                                <p:inputText value="#{novoUsuarioBean.usuario.tel}" class="form-control input-lg" pt:placeholder="Telefone"/>                          
+                                 <h:outputLabel>Tel</h:outputLabel>
+                                <p:inputText value="#{novoUsuarioBean.usuario.tel}" class="form-control input-lg" pt:placeholder="Telefone" pt:required=""/>                          
                             </div>
 
                             <div class="col-xs-6 col-md-6">
+                                 <h:outputLabel>Cel</h:outputLabel>
                                 <p:inputText value="#{novoUsuarioBean.usuario.cel}" class="form-control input-lg" pt:placeholder="Celular"/>                           
                             </div>
 
                             <div class="col-xs-6 col-md-6">
+                                 <h:outputLabel>DtNascimento</h:outputLabel>
                                 <p:inputText value="#{novoUsuarioBean.usuario.dtNascimento}" class="form-control input-lg" pt:placeholder="Data Nascimento"/>                          
-                                <p:calendar value="#{novoUsuarioBean.usuario.dtNascimento}" id="popupCal" />  
                             </div>
 
 
                             <div class="col-xs-6 col-md-6">
-                                <p:inputText value="#{novoUsuarioBean.usuario.CEP}" class="form-control input-lg" pt:placeholder="CEP"/>                           
+                                 <h:outputLabel>Cep</h:outputLabel>
+                                <p:inputText value="#{novoUsuarioBean.usuario.CEP}" class="form-control input-lg" pt:placeholder="CEP" pt:required=""/>                           
                             </div>
 
                             <div class="col-xs-6 col-md-6">
-                                <p:inputText value="#{novoUsuarioBean.usuario.rua}" class="form-control input-lg" pt:placeholder="Rua"/>                          
+                                 <h:outputLabel>Rua</h:outputLabel>
+                                <p:inputText value="#{novoUsuarioBean.usuario.rua}" class="form-control input-lg" pt:placeholder="Rua" pt:required=""/>                          
                             </div>
 
                             <div class="col-xs-6 col-md-6">
-                                <p:inputText value="#{novoUsuarioBean.usuario.bairro}" class="form-control input-lg" pt:placeholder="Bairro"/>                           
+                                 <h:outputLabel>Bairro</h:outputLabel>
+                                <p:inputText value="#{novoUsuarioBean.usuario.bairro}" class="form-control input-lg" pt:placeholder="Bairro" pt:required=""/>                           
                             </div>
 
 
 
                             <div class="col-xs-6 col-md-3">
-                                <p:inputText value="#{novoUsuarioBean.usuario.num}" class="form-control input-lg" pt:placeholder="Numero"/>                
+                                 <h:outputLabel>Num</h:outputLabel>
+                                <p:inputText value="#{novoUsuarioBean.usuario.num}" class="form-control input-lg" pt:placeholder="Numero" pt:required=""/>                
                             </div>
 
                             <div class="col-xs-6 col-md-9">
+                                 <h:outputLabel>Complemento</h:outputLabel>
                                 <p:inputText value="#{novoUsuarioBean.usuario.complemento}" class="form-control input-lg" pt:placeholder="Complemento"/>                       
                             </div>
                         </div>
 
 
-                        <label>Sexo : </label>                    <label class="radio-inline">
-                            <input type="radio" name="gender" value="M" id="male" />                        Masculino
-                        </label>
 
-                        <label class="radio-inline">
-                            <input type="radio" name="gender" value="F" id="female" />                        Feminino
-                        </label>
 
 
                         <h:commandButton class="btn btn-lg btn-primary btn-block signup-btn" action="#{novoUsuarioBean.cadastrar()}" value="Cadastrar"/>
