--- a/PI004-war/web/carouselDetalhes.xhtml
+++ b/PI004-war/web/carouselDetalhes.xhtml
@@ -4,6 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Facelet Title</title>
+                <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"></meta>
         <h:outputScript name="js/jquery-1.11.3.js" />
         <h:outputStylesheet name="css/style.css" /> 
         <h:outputStylesheet name="css/bootstrap.min.css" /> 
