--- a/PI004-war/web/index.xhtml
+++ b/PI004-war/web/index.xhtml
@@ -5,6 +5,7 @@
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Facelet Title</title>
+                <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"></meta>
     </h:head>
     <h:body>
         <h:form>
