--- a/PI004-war/web/listaClientes.xhtml
+++ b/PI004-war/web/listaClientes.xhtml
@@ -7,6 +7,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Facelet Title</title>
+                <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"></meta>
     </h:head>
     <h:body>
         <!--Importanto Cabeçalho-->
