--- a/PI004-war/web/listaProdutos.xhtml
+++ b/PI004-war/web/listaProdutos.xhtml
@@ -7,6 +7,7 @@
       xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
     <h:head>
         <title>Produtos</title>
+                <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"></meta>
         <h:outputScript name="js/jquery-1.11.3.js" />
         <h:outputStylesheet name="css/bootstrap.min.css" />
         <h:outputScript name="js/bootstrap.min.js" />
