--- a/PI004-war/web/menu.xhtml
+++ b/PI004-war/web/menu.xhtml
@@ -6,10 +6,12 @@
       xmlns:c="http://java.sun.com/jsp/jstl/core"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>       
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"></meta>
         <h:outputScript name="js/jquery-1.11.3.js" />
         <h:outputStylesheet name="css/style.css" /> 
         <h:outputStylesheet name="css/bootstrap.min.css" /> 
         <h:outputScript name="js/bootstrap.min.js" />
+      
     </h:head>
     <h:body>
         <nav class="navbar navbar-default">
@@ -22,7 +24,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="listaProdutos.xhtml">UziGames</a>
+                    <a class="navbar-brand" href="index.xhtml">UziGames</a>
                 </div>
 
 
