--- a/PI004-war/web/alterarProdutos.xhtml
+++ b/PI004-war/web/alterarProdutos.xhtml
@@ -79,7 +79,7 @@
             }
         </style>
         <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-        <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+        <!--<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>-->
     </h:head>
     <h:body>
 
@@ -127,7 +127,7 @@
                                  <h:outputLabel>Categoria</h:outputLabel>
                                  <h:selectOneMenu value="#{alterarProdutoBean.produto.categoriaProduto}" class="form-control input-lg">
                                     <f:selectItem itemValue="JOGOS" itemLabel="JOGOS" />
-                                    <f:selectItem itemValue="CONSOLE" itemLabel="CONSOLE" />
+                                    <f:selectItem itemValue="CONSOLES" itemLabel="CONSOLES" />
                                      <f:selectItem itemValue="ACESSORIOS" itemLabel="ACESSORIOS" />
                                 </h:selectOneMenu>   
                                  
