--- a/PI004-war/web/admin/cadastrarBackOffice.xhtml
+++ b/PI004-war/web/admin/cadastrarBackOffice.xhtml
@@ -96,10 +96,10 @@
     <h:body>
 
         <!--Importanto Cabeçalho-->
-        <ui:include src="cabecalho.xhtml"/>
+        <ui:include src="../cabecalho.xhtml"/>
 
         <!--Importanto Menus-->
-        <ui:include src="menu.xhtml"/>
+        <ui:include src="../menu.xhtml"/>
 
         <div class="container" id="wrap">
             <div class="row">
@@ -203,14 +203,7 @@
                             </div>
                         </div>
 
-
-
-
-
                         <h:commandButton class="btn btn-lg btn-primary btn-block signup-btn" action="#{novoUsuarioBean.cadastrar()}" value="Cadastrar"/>
-
-
-
 
                     </h:form>          
                 </div>
