--- a/PI004-war/web/admin/cadastroProduto.xhtml
+++ b/PI004-war/web/admin/cadastroProduto.xhtml
@@ -83,11 +83,11 @@
     </h:head>
     <h:body>
 
-        <!--Importanto Cabeçalho-->
-        <ui:include src="cabecalho.xhtml"/>
+       <!--Importanto Cabeçalho-->
+        <ui:include src="../cabecalho.xhtml"/>
 
         <!--Importanto Menus-->
-        <ui:include src="menu.xhtml"/>
+        <ui:include src="../menu.xhtml"/>
 
         <div class="container" id="wrap">
             <div class="row">
