--- a/PI004-war/web/admin/alterarProdutos.xhtml
+++ b/PI004-war/web/admin/alterarProdutos.xhtml
@@ -84,10 +84,10 @@
     <h:body>
 
         <!--Importanto Cabeçalho-->
-        <ui:include src="cabecalho.xhtml"/>
+        <ui:include src="../cabecalho.xhtml"/>
 
         <!--Importanto Menus-->
-        <ui:include src="menu.xhtml"/>
+        <ui:include src="../menu.xhtml"/>
 
         <div class="container" id="wrap">
             <div class="row">
