--- a/PI004-war/web/admin/relatorioVendas.xhtml
+++ b/PI004-war/web/admin/relatorioVendas.xhtml
@@ -45,31 +45,35 @@
             }
         </style>
         <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-        <script src="http://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+        <!--<script src="http://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>-->
 
     </h:head>
     <h:body>
 
         <!--Importanto Cabeçalho-->
+ <!--Importanto Cabeçalho-->
+        <ui:include src="../cabecalho.xhtml"/>
 
+        <!--Importanto Menus-->
+        <ui:include src="../menu.xhtml"/>
 
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"/>
         <div class="container">
             <table id="cart" class="table table-hover table-condensed">
                 <thead>
                     <tr>
-                        <th style="width:10%">Data da Compra</th>
-                        <th style="width:8%">Nome do Usuario</th>
-                        <th style="width:22%" class="text-center">Valor Total</th>                        
+                        <th style="width:8%">NºPedido</th>
+                        <th style="width:18%">Produto</th>
+                        <th style="width:8%">Total</th>                        
                     </tr>
                 </thead>
                 <tbody>
                     <ui:repeat value="#{produtoBean.relatorioVendas()}" var="prod">
                         <tr>
-                            <td data-th="Data da Compra">#{prod.id}</td>
-                            <td data-th="Data da Compra">#{prod.nome}</td>
-                            <td data-th="Data da Compra">#{prod.quantidade}</td>                            
-                            <td data-th="Data da Compra">#{prod.valor}</td>                            
+                            <td data-th="NºPedido">#{prod.id}</td>
+                            <td data-th="Produto">#{prod.nome}</td>
+                            <td data-th="Qtd">#{prod.quantidade}</td>                            
+                            <td data-th="Total">#{prod.valor}</td>                            
                            <!-- <td data-th="Valor Total" class="text-center">R$#{compraBean.valorTotal}</td>-->
                         </tr>
                     </ui:repeat>
