--- a/PI004-war/web/admin/cadastrarBackOffice.xhtml
+++ b/PI004-war/web/admin/cadastrarBackOffice.xhtml
@@ -177,24 +177,24 @@
 
                             <div class="col-xs-6 col-md-6">
                                  <h:outputLabel>Cep</h:outputLabel>
-                                <p:inputText value="#{novoUsuarioBean.usuario.CEP}" class="form-control input-lg" pt:placeholder="CEP" pt:required=""/>                           
+                                <p:inputText value="#{novoUsuarioBean.usuario.CEP}" class="form-control input-lg" pt:placeholder="CEP" />                           
                             </div>
 
                             <div class="col-xs-6 col-md-6">
                                  <h:outputLabel>Rua</h:outputLabel>
-                                <p:inputText value="#{novoUsuarioBean.usuario.rua}" class="form-control input-lg" pt:placeholder="Rua" pt:required=""/>                          
+                                <p:inputText value="#{novoUsuarioBean.usuario.rua}" class="form-control input-lg" pt:placeholder="Rua" />                          
                             </div>
 
                             <div class="col-xs-6 col-md-6">
                                  <h:outputLabel>Bairro</h:outputLabel>
-                                <p:inputText value="#{novoUsuarioBean.usuario.bairro}" class="form-control input-lg" pt:placeholder="Bairro" pt:required=""/>                           
+                                <p:inputText value="#{novoUsuarioBean.usuario.bairro}" class="form-control input-lg" pt:placeholder="Bairro" />                           
                             </div>
 
 
 
                             <div class="col-xs-6 col-md-3">
                                  <h:outputLabel>Num</h:outputLabel>
-                                <p:inputText value="#{novoUsuarioBean.usuario.num}" class="form-control input-lg" pt:placeholder="Numero" pt:required=""/>                
+                                <p:inputText value="#{novoUsuarioBean.usuario.num}" class="form-control input-lg" pt:placeholder="Numero"/>                
                             </div>
 
                             <div class="col-xs-6 col-md-9">
