--- a/PI004-war/web/admin/relatorioVendas.xhtml
+++ b/PI004-war/web/admin/relatorioVendas.xhtml
@@ -64,6 +64,7 @@
                     <tr>
                         <th style="width:8%">NºPedido</th>
                         <th style="width:18%">Produto</th>
+                        <th style="width:8%">Qtd</th>
                         <th style="width:8%">Total</th>                        
                     </tr>
                 </thead>
