--- a/PI004-war/web/admin/buscarProduto.xhtml
+++ b/PI004-war/web/admin/buscarProduto.xhtml
@@ -8,6 +8,8 @@
 
     <h:head>
         <link href="http://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet"/>
+                        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"></meta><link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet"/>
+
         <style type="text/css">
             .table>tbody>tr>td, .table>tfoot>tr>td{
                 vertical-align: middle;
