--- a/PI004-war/web/cabecalho.xhtml
+++ b/PI004-war/web/cabecalho.xhtml
@@ -9,8 +9,7 @@
     </h:head>
     <h:body>
         
-           <div id="cabecalho">
-           </div>
+            <img src="resources/img/cabecalho.png" alt="" class="img-responsive" />
         
     </h:body>
 </html>
