DANIEL É UM OTARIO

--- a/PI004-war/web/admin/alterarProdutos.xhtml
+++ b/PI004-war/web/admin/alterarProdutos.xhtml
@@ -84,7 +84,7 @@
     <h:body>
 
         <!--Importanto Cabeçalho-->
-        <ui:include src="../cabecalho.xhtml"/>
+        <img src="../resources/img/cabecalho.png" alt="" class="img-responsive" />
 
         <!--Importanto Menus-->
         <ui:include src="../menu.xhtml"/>
@@ -191,6 +191,7 @@
                 </div>
             </div>            
         </div>
+        <ui:include src="../rodape.xhtml"/> 
     </h:body>
 </html>
 
