--- a/PI004-war/web/admin/buscarProduto.xhtml
+++ b/PI004-war/web/admin/buscarProduto.xhtml
@@ -54,7 +54,7 @@
     <h:body>
 
         <!--Importanto Cabeçalho-->
-        <ui:include src="../cabecalho.xhtml"/>
+        <img src="../resources/img/cabecalho.png" alt="" class="img-responsive" />
 
         <!--Importanto Menus-->
         <ui:include src="../menu.xhtml"/>
@@ -93,6 +93,7 @@
                 </p:dataTable>                
             </h:form>
         </div>
+        
     </h:body>
 </html>
 
