--- a/PI004-war/web/admin/cadastrarBackOffice.xhtml
+++ b/PI004-war/web/admin/cadastrarBackOffice.xhtml
@@ -96,7 +96,7 @@
     <h:body>
 
         <!--Importanto Cabeçalho-->
-        <ui:include src="../cabecalho.xhtml"/>
+        <img src="../resources/img/cabecalho.png" alt="" class="img-responsive" />
 
         <!--Importanto Menus-->
         <ui:include src="../menu.xhtml"/>
@@ -211,7 +211,7 @@
         </div>
 
 
-
+<ui:include src="../rodape.xhtml"/> 
     </h:body>
 </html>
 
