--- a/PI004-war/web/admin/relatorioVendas.xhtml
+++ b/PI004-war/web/admin/relatorioVendas.xhtml
@@ -52,7 +52,7 @@
 
         <!--Importanto Cabeçalho-->
  <!--Importanto Cabeçalho-->
-        <ui:include src="../cabecalho.xhtml"/>
+        <img src="../resources/img/cabecalho.png" alt="" class="img-responsive" />
 
         <!--Importanto Menus-->
         <ui:include src="../menu.xhtml"/>
