--- a/PI004-war/web/listaClientes.xhtml
+++ b/PI004-war/web/listaClientes.xhtml
@@ -29,6 +29,7 @@
                 </h:dataTable>
             </h:panelGrid>
         </h:form>
+        <ui:include src="rodape.xhtml"/> 
     </h:body>
 </html>
 
