--- a/PI004-war/web/home.xhtml
+++ b/PI004-war/web/home.xhtml
@@ -10,171 +10,17 @@
         <title>Facelet Title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"></meta>
 
-       <meta name="description" value="A responsive carousel with one image fully visible and two images only partially visible. This slider contains only three images but is capable of handling more." />
-		<meta name="keywords" value="responsive, carousel, slider, partially, slices, jquery, example" />
-		<title>Responsive carousel showing one image and two images partially</title>
-<h:outputScript name="js/jquery-1.11.3.js" />
+        <title>Facelet Title</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"></meta>
+        <h:outputScript name="js/jquery-1.11.3.js" />
         <h:outputStylesheet name="css/style.css" /> 
         <h:outputStylesheet name="css/bootstrap.min.css" /> 
         <h:outputScript name="js/bootstrap.min.js" />
-		<script src="http://code.jquery.com/jquery-1.8.2.min.js" type="text/javascript"></script>
-		<script src="jquery.carouFredSel-6.2.0-packed.js" type="text/javascript"></script>
-                <script src="resources/js/jquery.carouFredSel-6.2.0-packed.js" type="text/javascript"></script>
-		<script type="text/javascript">
-			$(function() {
-				$('#slider').carouFredSel({
-					width: '100%',
-					align: false,
-					items: 3,
-					items: {
-						width: $('#wrapper').width() * 0.15,
-						height: 500,
-						visible: 1,
-						minimum: 1
-					},
-					scroll: {
-						items: 1,
-						timeoutDuration : 5000,
-						onBefore: function(data) {
-			
-							//	find current and next slide
-							var currentSlide = $('.slide.active', this),
-								nextSlide = data.items.visible,
-								_width = $('#wrapper').width();
-			
-							//	resize currentslide to small version
-							currentSlide.stop().animate({
-								width: _width * 0.15
-							});		
-							currentSlide.removeClass( 'active' );
-			
-							//	hide current block
-							data.items.old.add( data.items.visible ).find( '.slide-block' ).stop().fadeOut();					
-			
-							//	animate clicked slide to large size
-							nextSlide.addClass( 'active' );
-							nextSlide.stop().animate({
-								width: _width * 0.7
-							});						
-						},
-						onAfter: function(data) {
-							//	show active slide block
-							data.items.visible.last().find( '.slide-block' ).stop().fadeIn();
-						}
-					},
-					onCreate: function(data){
-			
-						//	clone images for better sliding and insert them dynamacly in slider
-						var newitems = $('.slide',this).clone( true ),
-							_width = $('#wrapper').width();
+        
+        <style type="text/css">
 
-						$(this).trigger( 'insertItem', [newitems, newitems.length, false] );
-			
-						//	show images 
-						$('.slide', this).fadeIn();
-						$('.slide:first-child', this).addClass( 'active' );
-						$('.slide', this).width( _width * 0.15 );
-			
-						//	enlarge first slide
-						$('.slide:first-child', this).animate({
-							width: _width * 0.7
-						});
-			
-						//	show first title block and hide the rest
-						$(this).find( '.slide-block' ).hide();
-						$(this).find( '.slide.active .slide-block' ).stop().fadeIn();
-					}
-				});
-			
-				//	Handle click events
-				$('#slider').children().click(function() {
-					$('#slider').trigger( 'slideTo', [this] );
-				});
-			
-				//	Enable code below if you want to support browser resizing
-				$(window).resize(function(){
-			
-					var slider = $('#slider'),
-						_width = $('#wrapper').width();
-			
-					//	show images
-					slider.find( '.slide' ).width( _width * 0.15 );
-			
-					//	enlarge first slide
-					slider.find( '.slide.active' ).width( _width * 0.7 );
-			
-					//	update item width config
-					slider.trigger( 'configuration', ['items.width', _width * 0.15] );
-				});
-
-			});
-		</script>
-                
-                		<style type="text/css">
-                                    body{
-                                   background-color:#5cb85c;
-                                    }
-
-			#wrapper {
-				height: 100%;
-				width: 100%;
-				min-height: 650px;
-				min-width: 900px;
-				padding-top: 1px;
-			}
-			#slider {
-				margin: 100px 0 0 0;
-				height: 500px;
-				overflow: hidden;
-				background: url(img/ajax-loader.gif) center center no-repeat;
-			}
-			
-			#slider .slide {
-				position: relative;
-				display: none;
-				height: 500px;
-				float: left;
-				background-position: center right;
-				cursor: pointer;
-				border-left: 1px solid #fff;
-			}
-			
-			#slider .slide:first-child {
-				border: none;
-			}
-			
-			#slider .slide.active {
-				cursor: default;
-			}
-			
-			#slider .slide-block {
-				position: absolute;
-				left: 40px;
-				bottom: 75px;
-				display: inline-block;
-				width: 435px;
-				background-color: #fff;
-				background-color: rgba(255,255,255, 0.8);	
-				padding: 20px;
-				font-size: 14px;
-				color: #134B94;
-				border: 1px solid #fff;
-				overflow: hidden;
-				border-radius: 4px;
-			}
-			
-			#slider .slide-block h4 {
-				font-size: 36px;
-				font-weight: bold;
-				margin: 0 0 10px 0;
-				line-height: 1;
-			}
-			#slider .slide-block p {
-				margin: 0;
-			}
-
-			
-		</style>
+        </style>
+        <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 	
     </h:head>
     <h:body>
